// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`change > 'should add new section' 1`] = `
"# Changelog

## [1.0.1](https://github.com/woodpecker-ci/woodpecker/releases/tag/1.0.1) - 2000-02-01

### ❤️ Thanks to all contributors! ❤️

@Alice Wonderland, @John Doe

### 💥 Breaking changes

- Break everything [[#1339](https://github.com/woodpecker-ci/woodpecker/pull/1339)]

### ✨ Features

- Add new feature [[#1338](https://github.com/woodpecker-ci/woodpecker/pull/1338)]

### 🐛 Bug Fixes

- Fix random UI bug [[#1337](https://github.com/woodpecker-ci/woodpecker/pull/1337)]
- Fix another bug ([abc](https://github.com/woodpecker-ci/woodpecker/commit/abc))

### 📈 Enhancement

- Update README ([def](https://github.com/woodpecker-ci/woodpecker/commit/def))

### Misc

- Update README ([def](https://github.com/woodpecker-ci/woodpecker/commit/def))

## [1.0.0](https://github.com/woodpecker-ci/woodpecker/releases/tag/1.0.0) - 2023-07-11

### ✨ Features

- Add new feature [#1338](https://github.com/woodpecker-ci/woodpecker/pull/1338) ([456](https://github.com/woodpecker-ci/woodpecker/commit/456))

## [0.0.2](https://github.com/woodpecker-ci/woodpecker/releases/tag/0.0.1) - 2020-01-01

### 🐛 Bug Fixes

- Fix random UI bug [#1337](https://github.com/woodpecker-ci/woodpecker/pull/1337) ([123](https://github.com/woodpecker-ci/woodpecker/commit/123))
- Fix another bug [#43](https://github.com/woodpecker-ci/woodpecker/pull/43) ([456](https://github.com/woodpecker-ci/woodpecker/commit/456))

## [0.0.1](https://github.com/woodpecker-ci/woodpecker/releases/tag/0.0.1) - 2020-01-01

### ✨ Features

- Add new feature (#1338) @Alice Wonderland
"
`;

exports[`change > 'should remove previous prerelease versions as soon as the full release is added' 1`] = `
"# Changelog

## [2.0.1](https://github.com/woodpecker-ci/woodpecker/releases/tag/2.0.1) - 2000-02-01

### ❤️ Thanks to all contributors! ❤️

@Alice Wonderland, @John Doe

### 💥 Breaking changes

- Break everything [[#1339](https://github.com/woodpecker-ci/woodpecker/pull/1339)]

### ✨ Features

- Add new feature [[#1338](https://github.com/woodpecker-ci/woodpecker/pull/1338)]

### 🐛 Bug Fixes

- Fix random UI bug [[#1337](https://github.com/woodpecker-ci/woodpecker/pull/1337)]
- Fix another bug ([abc](https://github.com/woodpecker-ci/woodpecker/commit/abc))

### 📈 Enhancement

- Update README ([def](https://github.com/woodpecker-ci/woodpecker/commit/def))

### Misc

- Update README ([def](https://github.com/woodpecker-ci/woodpecker/commit/def))

## [v2.0.0](https://github.com/woodpecker-ci/plugin-git/releases/tag/v2.0.0) - 2022-11-14

- FEATURES
  - Partial clone by default (#48)
- BUGFIXES
  - Make home var settable (#47)
- ENHANCEMENTS
  - Publish semver images (#50)

## [v2.0.0-pre.1](https://github.com/woodpecker-ci/plugin-git/releases/tag/v2.0.0-pre.1) - 2022-11-14

- FEATURES
  - Partial clone by default (#48)
- BUGFIXES
  - Make home var settable (#47)
- ENHANCEMENTS
  - Publish semver images (#50)
"
`;

exports[`change > 'should remove versions newer than the latest released version' 1`] = `
"# Changelog

## [2.0.4](https://github.com/woodpecker-ci/woodpecker/releases/tag/2.0.4) - 2000-02-01

### ❤️ Thanks to all contributors! ❤️

@Alice Wonderland, @John Doe

### 💥 Breaking changes

- Break everything [[#1339](https://github.com/woodpecker-ci/woodpecker/pull/1339)]

### ✨ Features

- Add new feature [[#1338](https://github.com/woodpecker-ci/woodpecker/pull/1338)]

### 🐛 Bug Fixes

- Fix random UI bug [[#1337](https://github.com/woodpecker-ci/woodpecker/pull/1337)]
- Fix another bug ([abc](https://github.com/woodpecker-ci/woodpecker/commit/abc))

### 📈 Enhancement

- Update README ([def](https://github.com/woodpecker-ci/woodpecker/commit/def))

### Misc

- Update README ([def](https://github.com/woodpecker-ci/woodpecker/commit/def))

## [v2.0.1](https://github.com/woodpecker-ci/plugin-git/releases/tag/v2.0.1) - 2022-12-21

- BUGFIXES
  - Fix dockerfile to build correct go binary (#54)
  - Do not set GIT_TERMINAL_PROMPT=0 for git (#52)

## [v2.0.0](https://github.com/woodpecker-ci/plugin-git/releases/tag/v2.0.0) - 2022-11-14

- FEATURES
  - Partial clone by default (#48)
- BUGFIXES
  - Make home var settable (#47)
- ENHANCEMENTS
  - Publish semver images (#50)
"
`;

exports[`change > 'should update existing changelog section' 1`] = `
"# Changelog

## [2.0.3](https://github.com/woodpecker-ci/woodpecker/releases/tag/2.0.3) - 2000-02-01

### ❤️ Thanks to all contributors! ❤️

@Alice Wonderland, @John Doe

### 💥 Breaking changes

- Break everything [[#1339](https://github.com/woodpecker-ci/woodpecker/pull/1339)]

### ✨ Features

- Add new feature [[#1338](https://github.com/woodpecker-ci/woodpecker/pull/1338)]

### 🐛 Bug Fixes

- Fix random UI bug [[#1337](https://github.com/woodpecker-ci/woodpecker/pull/1337)]
- Fix another bug ([abc](https://github.com/woodpecker-ci/woodpecker/commit/abc))

### 📈 Enhancement

- Update README ([def](https://github.com/woodpecker-ci/woodpecker/commit/def))

### Misc

- Update README ([def](https://github.com/woodpecker-ci/woodpecker/commit/def))

## [v2.0.1](https://github.com/woodpecker-ci/plugin-git/releases/tag/v2.0.1) - 2022-12-21

- BUGFIXES
  - Fix dockerfile to build correct go binary (#54)
  - Do not set GIT_TERMINAL_PROMPT=0 for git (#52)

## [v2.0.0](https://github.com/woodpecker-ci/plugin-git/releases/tag/v2.0.0) - 2022-11-14

- FEATURES
  - Partial clone by default (#48)
- BUGFIXES
  - Make home var settable (#47)
- ENHANCEMENTS
  - Publish semver images (#50)

## [v1.6.1](https://github.com/woodpecker-ci/plugin-git/releases/tag/v1.6.1) - 2022-11-06

- BUGFIXES
  - Explicite set and check for home dir (#46)

## [v1.6.0](https://github.com/woodpecker-ci/plugin-git/releases/tag/v1.6.0) - 2022-10-13

- BUGFIXES
  - Handle git-lfs separately (#40)
- ENHANCEMENTS
  - if no branch info is set, fallback to default repo branch (#41)

## [v1.5.0](https://github.com/woodpecker-ci/plugin-git/releases/tag/v1.5.0) - 2022-10-06

- ENHANCEMENTS
  - Release binarys (#37)
  - Use ref to checkout if no commit sha is set (#36)
  - Fix tests (#35)
- MISC
  - Update urfave/cli to v2.17.1 (#38)
  - Use built-in log instead of logrus (#34)

## [v1.4.0](https://github.com/woodpecker-ci/plugin-git/releases/tag/v1.4.0) - 2022-08-30

- ENHANCEMENTS
  - Auto enable tags clone if it's ci event is 'tag' (#30)
  - Support more architectures (#29)

## [v1.3.0](https://github.com/woodpecker-ci/plugin-git/releases/tag/v1.3.0) - 2022-08-15

- FEATURES
  - Add option to Change branch name for checkout (#28)

## [v1.2.0](https://github.com/woodpecker-ci/plugin-git/releases/tag/v1.2.0) - 2022-05-25

- FEATURES
  - Add git-lfs (#21)
  - Custom ssl certs for git (#19)
- ENHANCEMENTS
  - Add an \`lfs\` setting which lets you disable Git LFS (#24)
- DOCUMENTATION
  - Add docs page (#23)

## [v1.1.2](https://github.com/woodpecker-ci/plugin-git/releases/tag/v1.1.2) - 2022-01-30

- BUGFIXES
  - Fix empty login/password in netrc (#20)

## [v1.1.1](https://github.com/woodpecker-ci/plugin-git/releases/tag/v1.1.1) - 2021-12-23

- BUGFIXES
  - Fix version info (#13)

## [v1.1.0](https://github.com/woodpecker-ci/plugin-git/releases/tag/v1.1.0) - 2021-12-18

- FEATURES
  - Add ppc64le support (#8)
- BUGFIXES
  - Regognize \\"CI_*\\" EnvVars (#6)
- ENHANCEMENTS
  - Multiarch build (#8)
- MISC
  - Upgrade urfave/cli to v2 (#5)
"
`;

exports[`change > should generate a changelog 1`] = `
"## [1.0.0](https://github.com/woodpecker-ci/woodpecker/releases/tag/1.0.0) - 2000-02-01

### ❤️ Thanks to all contributors! ❤️

@Alice Wonderland, @John Doe

### 💥 Breaking changes

- Break everything [[#1339](https://github.com/woodpecker-ci/woodpecker/pull/1339)]

### ✨ Features

- Add new feature [[#1338](https://github.com/woodpecker-ci/woodpecker/pull/1338)]

### 🐛 Bug Fixes

- Fix random UI bug [[#1337](https://github.com/woodpecker-ci/woodpecker/pull/1337)]
- Fix another bug ([abc](https://github.com/woodpecker-ci/woodpecker/commit/abc))

### 📈 Enhancement

- Update README ([def](https://github.com/woodpecker-ci/woodpecker/commit/def))

### Misc

- Update README ([def](https://github.com/woodpecker-ci/woodpecker/commit/def))"
`;
